--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <p class="text-stone-500 mt-3 font-light tracking-wider text-sm md:text-base">
-                逛逛攤位，點選你需要的「解憂小物」。 Pick your own “stress relievers.
+                逛逛攤位，點選你需要的「解憂小物」。 Pick your own “stress relievers".
             </p>
         </header>
 
@@ -469,4 +469,5 @@
 
     </script>
 </body>
+
 </html>
